--- a/Style.css
+++ b/Style.css
@@ -3,40 +3,42 @@
 body {
    font-family: 'Outfit', sans-serif;
    text-align: center;
-   background-color: hsl(197, 17%, 84%);
-  
+   background-color: #D6E1F0;
+   min-height: 100vh;
+   margin: 0;
+   padding: 0;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;  
+   align-items: center;
 }
 
 h1 {
     font-size: 20px;
     color: hsl(218, 44%, 22%);
+    padding: 0 1em;
 }
 
-.flex-container {
-    display: flex;
-    height: 1000px;
-    justify-content: center;
-    align-items: center;
-}
-
-#Container {
-    width: 250px;
+main div {
+    width: 20vh;
     height: auto;
-    padding: 15px;
+    padding: .8vh;
     background-color: white;
     border-radius: 25px;   
     box-shadow: 3px 3px 10px hsla(217, 24%, 44%, 0.491); 
 }
 
-#Container img {
-    width: 100%;
+main img {
+    max-width: 18vh;
     height: auto;
+    margin-top: .5vh;
     border-radius: 10px;
     margin-bottom: 10px;
 }
 
-#Container p {
+div p {
     font-size: 15px;
     color: hsl(220, 15%, 55%);
     margin-bottom: 10px;
+    padding: 0 1em;
 }
