--- a/Style.css
+++ b/Style.css
@@ -19,26 +19,27 @@ h1 {
     padding: 0 1em;
 }
 
-main div {
-    width: 20vh;
-    height: auto;
-    padding: .8vh;
+main {
+    min-width: 10vh;
+    width: 270px;    
     background-color: white;
-    border-radius: 25px;   
+    border-radius: 15px;   
     box-shadow: 3px 3px 10px hsla(217, 24%, 44%, 0.491); 
 }
 
 main img {
-    max-width: 18vh;
+    max-width: 15em;
+    min-width: 10em;
     height: auto;
-    margin-top: .5vh;
-    border-radius: 10px;
+    margin-top: 1em;
     margin-bottom: 10px;
-}
+    border-radius: 10px;
+}    
 
-div p {
+
+p {
     font-size: 15px;
     color: hsl(220, 15%, 55%);
     margin-bottom: 10px;
-    padding: 0 1em;
+    padding: 0 1em 1em;
 }
